
dprint 0.0.5
--------------
NEW
* Working on turning 'dprint' into S3 method
* Renamed dprint.table to dprint.data.frame
* Updatd to > R3.0 and depriciated functions in referenced packages
* pg.dim parameter is now c(height,width) instead of c(width, height), to allign with points to rows of a data.frame and columns respectively

dprint 0.0.4
--------------
NEW
* Added 'Fr' function for simple rounding

ASSUMPTIONS
* When title is defined, and only one conditional variable is defined, just print the values concatenated to the text
* When more than one conditional variable, concatenate the variable name and the current combination of values (same as before)

BUGS
* Fixed bug when using row highlighting feature.  The logic that accounts for row grouping was referring to the wrong index (insert.grp1)
* Corrected location of row highlight
* Adjusted background highlighting of column names
* When a row group was too large to fit on one page, the newpage mechanism was not being triggred.  Modified function size.simp for correction.  May require addional attention for options or default presentation when this scneario occurs.
dprint 0.0.3
--------------

CREDIT

* gave credit to Rocco for formula interface

RENAME Functions

* From `fmla.lhs` to `fmla_lhs`

* From `fmla.rhs` to `fmla_rhs`

* From `fmla.inter` to `fmla_inter`