@@ -2,7 +2,7 @@ Package: dprint
 Type: Package
 Title: Print Tabular Data to Graphics Device
 Version: 0.0.4
-Date: 2014-12-12
+Date: 2017-11-15
 Author: Carlin Brickner
 Maintainer: Carlin Brickner <carlin.brickner.rpackage@gmail.com>
 Depends:
@@ -11,9 +11,10 @@ Imports:
 	grid, 
 	stats,
 	grDevices
-Description: This package provides a generalized method for printing tabular
+Description: Provides a generalized method for printing tabular
     data within the R environment in order to make the process of presenting
-    high quality tabular output seamless for the useR.
+    high quality tabular output seamless for the user. Utilizes a formula interface to
+	specificy the attributes of a tables found in manuscripts or business reports.
 License: GPL (>= 2)
 LazyLoad: yes
 RoxygenNote: 6.0.1
