@@ -2,10 +2,13 @@
 dprint 0.0.5
 --------------
 NEW
-* Working on turning 'dprint' into S3 method
-* Renamed dprint.table to dprint.data.frame
+* 'dprint' is now S3 generic function
+* Renamed dprint.table to dprint.data.frame to be S3 method of dprint
 * Updatd to > R3.0 and depriciated functions in referenced packages
 * pg.dim parameter is now c(height,width) instead of c(width, height), to allign with points to rows of a data.frame and columns respectively
+
+BUGS
+
 
 dprint 0.0.4
 --------------
